<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1">


    <TextView
        android:id="@+id/candidate_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
        android:layout_width="253dp"
        android:layout_height="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/candidateprofile"
        android:textColorHint="#000000"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="124dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/ic_baseline_account_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="37dp"
        app:layout_constraintTop_toBottomOf="@id/candidate_profile"/>

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="550dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">


        <TextView
            android:id="@+id/Name"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/name"
            android:padding="3dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Name" />

        <TextView
            android:id="@+id/Age"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/age"
            android:textSize="18sp"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintEnd_toEndOf="@id/Name"
            app:layout_constraintTop_toBottomOf="@id/Name" />

        <TextView
            android:id="@+id/Gender"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/gender"
            android:textSize="18sp"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/Age"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.464" />

        <TextView
            android:id="@+id/Political_Party"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="#ffffff"
            android:hint="@string/politicalparty"
           android:textSize="18sp"
            android:padding="3dp"
            android:textColorHint="#000000"
            app:layout_constraintTop_toBottomOf="@id/Gender" />

        <TextView
            android:id="@+id/Political_Experience"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:background="#ffffff"
            android:hint="@string/politicalexperience"
            android:padding="3dp"
            android:textColorHint="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Fathers_Name"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:background="#ffffff"
            android:hint="@string/fathername"
            android:padding="3dp"
            android:textColorHint="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Mothers_Name"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:background="#ffffff"
            android:hint="@string/mothernamde"
            android:padding="3dp"
            android:textColorHint="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Spouse_Name"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:background="#ffffff"
            android:hint="@string/spousename"
            android:padding="3dp"
            android:textColorHint="#000000"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/Educational_Qualification"
            android:layout_width="378dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_marginTop="100dp"
            android:background="#ffffff"
            android:hint="@string/education"
            android:padding="3dp"
            android:textColorHint="#000000"
            android:textSize="18sp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>